--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@nuxt/content": "^3.0.1",
+    "@nuxt/image": "^1.9.0",
     "nuxt": "^3.15.4",
     "vue": "latest",
     "vue-router": "latest"
