--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@nuxt/content": "^3.0.1",
     "@nuxt/fonts": "^0.10.3",
+    "@nuxt/icon": "^1.10.3",
     "@nuxt/image": "^1.9.0",
     "nuxt": "^3.15.4",
     "vue": "latest",
