--- a/.github/workflows/nuxthub.yml
+++ b/.github/workflows/nuxthub.yml
@@ -28,7 +28,7 @@ jobs:
         run: npm install
 
       - name: Build application
-        run: npm run build
+        run: npm run generate
 
       - name: Deploy to NuxtHub
         uses: nuxt-hub/action@v1
