--- a/content/pages/index.yml
+++ b/content/pages/index.yml
@@ -3,7 +3,7 @@ address: Ст.Романовская, пер.Союзный 97а
 seo: ГБУ РО "ЦРБ" в Волгодонском районе
 description: Сайт ЦРБ Волгодонского района
 zapis:
-  label: Made with Nuxt UI Pro
+  label: Запись на прием
   to: https://xn--80adfbej0ceadr0m.xn--p1ai/
 Gosuslugi:
   label: Запись через госуслуги
