Update hero section

--- a/content/pages/index.yml
+++ b/content/pages/index.yml
@@ -2,6 +2,10 @@ title: Государственное бюджетное учреждение Р
 address: Ст.Романовская, пер.Союзный 97а
 seo: ГБУ РО "ЦРБ" в Волгодонском районе
 description: Сайт ЦРБ Волгодонского района
+hero:
+  subtitle: Государственное бюджетное учреждение Ростовской области
+  subtitle1: в Волгодонском районе
+  title: Центральная районная больница
 zapis:
   label: Запись на прием
   to: https://xn--80adfbej0ceadr0m.xn--p1ai/
