--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
+    "lint": "eslint .",
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
@@ -14,13 +15,15 @@
     "@nuxt/fonts": "^0.10.3",
     "@nuxt/icon": "^1.10.3",
     "@nuxt/image": "^1.9.0",
-    "@nuxt/scripts": "^0.9.5",
+    "@nuxt/scripts": "^0.10.1",
     "nuxt": "^3.15.4",
     "vue": "latest",
     "vue-router": "latest"
   },
   "devDependencies": {
-    "pug": "^3.0.3",
-    "sass-embedded": "^1.83.4"
+    "@nuxt/eslint": "^1.0.1",
+    "eslint": "^9.20.0",
+    "postcss-scss": "^4.0.9",
+    "pug": "^3.0.3"
   }
 }
