--- a/package.json
+++ b/package.json
@@ -11,18 +11,19 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "@nuxt/content": "^3.1.0",
+    "@nuxt/content": "^3.1.1",
     "@nuxt/fonts": "^0.10.3",
     "@nuxt/icon": "^1.10.3",
     "@nuxt/image": "^1.9.0",
     "@nuxt/scripts": "^0.10.1",
     "nuxt": "^3.15.4",
     "vue": "latest",
+    "vue-final-modal": "^4.5.5",
     "vue-router": "latest"
   },
   "devDependencies": {
     "@nuxt/eslint": "^1.0.1",
-    "eslint": "^9.20.0",
+    "eslint": "^9.20.1",
     "postcss-scss": "^4.0.9",
     "pug": "^3.0.3"
   }
