--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nuxt/icon": "^1.10.3",
     "@nuxt/image": "^1.9.0",
     "@nuxt/scripts": "^0.10.1",
+    "@nuxt/ui": "^2.21.0",
     "nuxt": "^3.15.4",
     "vue": "latest",
     "vue-final-modal": "^4.5.5",
