--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "scripts": {
     "build": "nuxt build",
-    "dev": "nuxt dev",
+    "dev": "npx nuxi cleanup && nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "lint": "eslint .",
@@ -17,8 +17,10 @@
     "@nuxt/image": "^1.9.0",
     "@nuxt/scripts": "^0.10.5",
     "@nuxt/ui": "^3.0.0-alpha.13",
+    "@pinia/nuxt": "^0.10.1",
     "appwrite": "^17.0.0",
     "nuxt": "^3.15.4",
+    "pinia": "^3.0.1",
     "vue": "latest",
     "vue-router": "latest"
   },
