--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@nuxt/icon": "^1.10.3",
     "@nuxt/image": "^1.9.0",
     "@nuxt/scripts": "^0.10.5",
-    "@nuxt/ui": "^3.0.0-alpha.13",
+    "@nuxt/ui": "^3.0.0-beta.2",
     "@pinia/nuxt": "^0.10.1",
     "appwrite": "^17.0.0",
     "nuxt": "^3.15.4",
