--- a/content/pages/index.yml
+++ b/content/pages/index.yml
@@ -7,7 +7,7 @@ hero:
   subtitle1: в Волгодонском районе
   title: Центральная районная больница
 zapis:
-  label: Запись на прием
+  label: ЗдоровьеДона.рф
   to: https://xn--80adfbej0ceadr0m.xn--p1ai/
 Gosuslugi:
   label: Запись через госуслуги
