--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
   "dependencies": {
     "@nuxt/content": "^3.3.0",
     "@nuxt/fonts": "^0.11.0",
-    "@nuxt/icon": "^1.10.3",
-    "@nuxt/ui": "^3.0.0-beta.3",
+    "@nuxt/icon": "^1.11.0",
+    "@nuxt/ui": "^3.0.0",
     "@pinia/nuxt": "^0.10.1",
-    "appwrite": "^17.0.0",
+    "appwrite": "^17.0.1",
     "nuxt": "^3.16.0",
     "pinia": "^3.0.1",
     "vue": "latest",
