--- a/content/pages/shhedule.yml
+++ b/content/pages/shhedule.yml
@@ -77,7 +77,7 @@ data:
       mn: "08:00 - 12:00"
       tu: "08:00 - 12:00"
       wd: "08:00 - 12:00"
-      th: "Выезд на ФАП"
+      th: "Выходной"
       fr: "08:00 - 12:00"
       st: "Выходной"
     position: 14
@@ -106,7 +106,7 @@ data:
       mn: "08:00 - 12:00"
       tu: "08:00 - 12:00"
       wd: "08:00 - 12:00"
-      th: "Выезд на ФАП"
+      th: "Выходной"
       fr: "08:00 - 12:00"
       st: "Выходной"
     position: 6
@@ -147,7 +147,7 @@ data:
       wd: "14:00 - 17:00"
       th: "нет приема"
       fr: "нет приема"
-      st: "09:00 - 12:00"
+      st: "Выходной"
     position: 21
     job: "врач-уролог"
     name: "Шакиров Рустам Ташмурадович"
@@ -390,7 +390,7 @@ data:
       mn: "08:00 - 12:00"
       tu: "08:00 - 12:00"
       wd: "08:00 - 12:00"
-      th: "Выезд на ФАП"
+      th: "Выходной"
       fr: "08:00 - 12:00"
       st: "Выходной"
     job: "врач-стоматолог"
@@ -436,7 +436,7 @@ data:
       wd: "12:00 - 16:00"
       th: "12:00 - 16:00"
       fr: "08:00 - 12:00"
-      st: "По графику"
+      st: "Выходной"
     position: 7
     name: "Садовова Валентина Павловна"
     cabinet: 213
@@ -462,7 +462,7 @@ data:
       wd: "14:30 - 17:00"
       th: "нет приема"
       fr: "нет"
-      st: "09-00 - 12:00"
+      st: "Выходной"
     position: 27
     cabinet: 107
     vacation: false
@@ -529,7 +529,7 @@ data:
       wd: "08:30 - 12:30"
       th: "08:30 - 12:30"
       fr: "08:30 - 12:30"
-      st: "Нет приема"
+      st: "Выходной"
     position: 5
     cabinet: 217
     vacation: false
@@ -617,7 +617,7 @@ data:
       wd: "09:00 - 15:00"
       th: "нет приема"
       fr: "10:00 - 15:00"
-      st: "09:00 - 12:00"
+      st: "Выходной"
     cabinet: 311
     vacation: false
     job: "врач-кардиолог"
