--- a/content/pages/shhedule.yml
+++ b/content/pages/shhedule.yml
@@ -418,7 +418,7 @@ data:
       tu: "нет приема"
       wd: "14:00 - 17:00"
       th: "нет приема"
-      fr: "нет"
+      fr: "нет приема"
       st: "Выходной"
     position: 27
     cabinet: 107
