--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nuxt/icon": "^1.11.0",
     "@nuxt/ui": "^3.0.1",
     "@pinia/nuxt": "^0.10.1",
+    "@vite-pwa/nuxt": "^0.10.6",
     "nuxt": "^3.16.1",
     "pinia": "^3.0.1",
     "vue": "latest",
